knife intersect create 4 times the same geometry. #50855

Closed
opened 2017-03-04 21:06:42 +01:00 by mathieu menuet · 7 comments

System Information
all vendors

Blender Version
Broken: 2.78c and latest master

Short description of error
When using the knife intersection with default 'separate' option, the intersection is correct, but done 4 times.

Exact steps for others to reproduce the error
Open attached file with default cube an a plane, hit spacebar in 3D view, call intersect (knife), you have 16 created and selected verts although only 4 are needed to draw the square that is the intersection.
The selection state should also reflect the 'separate' option by being really separated from the original meshes. If you hit G after intersection, the cube and the plane are deformed.
Expected behavior: only one filled square should be created and selected. This square should be separated from the original meshes.
bug intersect knife.blend
Note that when separate is unchecked, the duplication problem is not happening, but the newly created verts are not selected anymore.
Excpected behavior in this case: newly created verts are selected like with other operators.

**System Information** all vendors **Blender Version** Broken: 2.78c and latest master **Short description of error** When using the knife intersection with default 'separate' option, the intersection is correct, but done 4 times. **Exact steps for others to reproduce the error** Open attached file with default cube an a plane, hit spacebar in 3D view, call intersect (knife), you have 16 created and selected verts although only 4 are needed to draw the square that is the intersection. The selection state should also reflect the 'separate' option by being really separated from the original meshes. If you hit G after intersection, the cube and the plane are deformed. Expected behavior: only one filled square should be created and selected. This square should be separated from the original meshes. [bug intersect knife.blend](https://archive.blender.org/developer/F502301/bug_intersect_knife.blend) Note that when separate is unchecked, the duplication problem is not happening, but the newly created verts are not selected anymore. Excpected behavior in this case: newly created verts are selected like with other operators.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @bliblubli

Added subscriber: @bliblubli

Added subscriber: @ideasman42

Added subscriber: @ideasman42

The newly created edges & vertices should be selected, otherwise this is working as intended regarding the geometry output.

"Separate" means intersected surfaces aren't attached to each other.

The newly created edges & vertices should be selected, otherwise this is working as intended regarding the geometry output. "Separate" means intersected surfaces aren't attached to each other.

This issue was referenced by 3caeb51d7f

This issue was referenced by 3caeb51d7f27ecf3f5b4c0edd9293e7a5c72d527

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added 'Cut' option a461216885

Added 'Cut' option a461216885
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50855
No description provided.