Fix T50855: Intersect (knife) w/o separate doesn't select